<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/mygtukasManoIstorija"
        android:id="@+id/mygtukasManoIstorija"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:onClick="onHistoryClicked"
        android:layout_marginBottom="5dp"
        android:background="#0099CC"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/mygtukasMarsrutai"
        android:id="@+id/mygtukasMarsrutai"
        android:layout_below="@+id/mygtukasManoIstorija"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/mygtukasManoIstorija"
        android:layout_alignEnd="@+id/mygtukasManoIstorija"
        android:clickable="true"
        android:onClick="onAllRoutesClicked"
        android:layout_marginBottom="5dp"
        android:background="#0099CC"
        android:textColor="#FFFFFF"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/mygtukasIssukiai"
        android:id="@+id/mygtukasIssukiai"
        android:layout_below="@+id/mygtukasMarsrutai"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/mygtukasMarsrutai"
        android:layout_alignEnd="@+id/mygtukasMarsrutai"
        android:clickable="true"
        android:background="#0099CC"
        android:textColor="#FFFFFF"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/mygtukasPradetiTreniruote"
        android:id="@+id/mygtukasPradetiTreniruote"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onStartTrainingClicked"
        android:background="#0099CC"
        android:textColor="#FFFFFF"
        android:focusableInTouchMode="false"
        android:focusable="false" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:src="@mipmap/logout"
        android:id="@+id/imageView2"
        android:onClick="onLogoutClicked"
        android:layout_alignBottom="@+id/mygtukasManoIstorija"
        android:layout_alignRight="@+id/mygtukasPradetiTreniruote"
        android:layout_alignEnd="@+id/mygtukasPradetiTreniruote" />

</RelativeLayout>
