<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.linijumsolutions.gg_sports.screens.GenerateRouteActivity">

    <EditText
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/rangeField"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:singleLine="false"
        android:textIsSelectable="false"
        android:maxLength="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/generate_title"
        android:id="@+id/button"
        android:layout_alignBottom="@+id/rangeField"
        android:layout_toRightOf="@+id/rangeField"
        android:layout_toEndOf="@+id/rangeField"
        android:onClick="onGenerateClicked" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_above="@+id/button2"
        android:layout_below="@+id/rangeField" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/start_title"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
